fix: Overflow content on small screens

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -108,6 +108,6 @@ body {
   }
 
   .img-bg {
-    height: 400px;
+    height: 450px;
   }
 }
